--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,13 @@
   </div>
 </section>
 <section class="section">
-  <div class="container">
+  <div class="container content">
     {{ cat ("src/include/benchmarks.html") }}
+    <a href='https://github.com/sebbekarlsson/fjb' target='_blank' class='button is-danger is-large mt-4'>Get FJB</button></a>
+  </div>
+</section>
+<section class='section'>
+  <div class='container content'>
   </div>
 </section>
 @)
