--- a/src/nav.html
+++ b/src/nav.html
@@ -14,7 +14,7 @@
       <div class="navbar-end">
         {{
           map (navItems, (@
-            <a href="{{ $0.href }}" class="navbar-item is-active">
+            <a href="{{ $0.href }}" class="navbar-item">
               {{ $0.label }}
             </a> 
           @))
