--- a/src/docs.html
+++ b/src/docs.html
@@ -6,6 +6,9 @@
   <div class="container content">
     {{ cat ("src/include/FJB_README.html") }}
   </div>
+  <div class='container content mt-4'>
+    <i class='mt-8'>Please note that the content above is from the README.md over at Github, it might be slightly broken.</i>
+  </div>
 </section>
 @)
 
