--- a/src/base.html
+++ b/src/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {{ cat ("src/analytics.html") }}
         {{ cat ("src/fav.html") }}
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
