--- a/src/analytics.html
+++ b/src/analytics.html
@@ -1,9 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TK35LVXQHD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49904423-18"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-TK35LVXQHD');
+  gtag('config', 'UA-49904423-18');
 </script>
+
