--- a/src/analytics.html
+++ b/src/analytics.html
@@ -1,10 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49904423-18"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F19V6V7G01"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-49904423-18');
+  gtag('config', 'G-F19V6V7G01');
 </script>
-
