--- a/src/pages/docs.html
+++ b/src/pages/docs.html
@@ -1,7 +1,7 @@
-#%extends "src/base.html"
+#%extends "src/content.html"
 
 
-(@#%block root
+(@#%block content
 <section class="section">
   <div class="container content">
     {{ cat ("src/include/FJB_README.html") }}
