--- a/src/base.html
+++ b/src/base.html
@@ -15,11 +15,10 @@
     </head>
     <body> 
         <div id="root">
-            {{ cate ("src/nav.html") }}
+            {{ cate ("src/nav.html") }} 
             (@#%block root @)
         </div>
-        <script type='text/javascript'>{{ cate ("src/static/scripts.gpp") }}</script>
-        <script type='text/javascript'>{{ cat ("src/static/js/nav.js") }}</script>
+        <script type='text/javascript' src="dist.js"></script>
     </body>
     <footer class="footer">
       <div class="content has-text-centered">
