--- a/src/nav.html
+++ b/src/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-dark">
   <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item">
+      <a class="navbar-item main-item" href='index.html'>
         <img src="img/logo.png" alt="Logo">
       </a>
       <span class="navbar-burger is-mobile" data-target="navbarMenuHeroB">
