adds terminal widget

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,6 +15,9 @@
     </div>
   </div>
 </section>
+<section class='section content has-text-centered'>
+  <div id='terminal'></div>
+</section>
 <section class='section content'>
   <div class='columns'>
     <div class='column'>
