--- a/src/base.html
+++ b/src/base.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta name="description" content="Self employed IT-consultant / Programmer">
-        <meta name="keywords" content="IT-consultant,programmer,coder,consultant,developer,development,technology,tech,CV,resume">
+        <meta name="description" content="FJB - Fast Javascript Bundler">
+        <meta name="keywords" content="FJB,Fast Javascript Bundler,Javascript,npm,node_modules,react,module,webpack,esbuild,yarn">
         <title>{{ title }}</title>
         <style>
             {{ cate ("src/static/styles.gpp") }}
@@ -25,7 +25,7 @@
         {{ cate ("src/social.html") }}
       </div>
       <div class="content has-text-centered">
-        <strong>Created using</strong> <a href="https://github.com/sebbekarlsson/gpp">https://github.com/sebbekarlsson/gpp</a>
+        <strong>Website created using</strong> <a target='_blank' href="https://github.com/sebbekarlsson/gpp">https://github.com/sebbekarlsson/gpp</a>
       </div>
     </footer>
 </html>
