add more meta tags

--- a/src/base.html
+++ b/src/base.html
@@ -8,6 +8,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="description" content="FJB - Fast Javascript Bundler">
         <meta name="keywords" content="FJB,Fast Javascript Bundler,Javascript,npm,node_modules,react,module,webpack,esbuild,yarn">
+
+        <meta property="og:title" content="FJB" />
+        <meta property="og:url" content="https://fjbundler.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="FJB - Fast Javascript Bundler" />
+        <meta property="og:image" content="https://fjbundler.com/img/logo.png" />
+
         <title>{{ title }}</title>
         <style>
             {{ cate ("src/static/styles.gpp") }}
