--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
       <p class="subtitle has-text-centered">
       {{ description }} 
       </p>
-      <a class='button is-dark is-large' title='see benchmarks' href='benchmarks.html'>Benchmarks</a>
+      <a class='button is-dark is-large' id="benchmarks_button" title='see benchmarks' href='benchmarks.html'>Benchmarks</a>
     </div>
   </div>
 </section>
