--- a/src/base.html
+++ b/src/base.html
@@ -9,11 +9,13 @@
         <meta name="description" content="FJB - Fast Javascript Bundler">
         <meta name="keywords" content="FJB,Fast Javascript Bundler,Javascript,npm,node_modules,react,module,webpack,esbuild,yarn">
 
-        <meta property="og:title" content="FJB" />
+        <meta property="og:title" content="{{ title }}" />
         <meta property="og:url" content="https://fjbundler.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="FJB - Fast Javascript Bundler" />
         <meta property="og:image" content="https://fjbundler.com/img/logo.png" />
+
+        <meta name="twitter:card" content="{{ title }}">
 
         <title>{{ title }}</title>
         <style>
