include date meta tags

--- a/src/base.html
+++ b/src/base.html
@@ -8,12 +8,18 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="description" content="FJB - Fast Javascript Bundler">
         <meta name="keywords" content="FJB,Fast Javascript Bundler,Javascript,npm,node_modules,react,module,webpack,esbuild,yarn">
+        <meta name='date' content='(@#!bash
+        (date | tr -d \\n)
+        @)'>
 
         <meta property="og:title" content="{{ title }}" />
         <meta property="og:url" content="https://fjbundler.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="FJB - Fast Javascript Bundler" />
         <meta property="og:image" content="https://fjbundler.com/img/logo.png" />
+        <meta property='og:date' content='(@#!bash
+        (date | tr -d \\n)
+        @)'>
 
         <meta name="twitter:card" content="{{ title }}">
 
