--- a/src/base.html
+++ b/src/base.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         {{ cat ("src/tags.html") }}
-        <div id="root">
+        <div id="root" data-nosnippet>
             {{ cate ("src/nav.html") }} 
             (@#%block root @)
         </div>
