--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -13,7 +13,7 @@
       <tr>
         <th>name</th>
         <th class='is-hidden-mobile'>size</th>
-        <th class='is-hidden-mobile' title="Number of people who has downloaded this item">downloads</th>
+        <th class='is-hidden-mobile' title="Number of people who has downloaded this item">author</th>
         <th colspan="2">date</th>
       </tr>
     </thead>
@@ -26,7 +26,7 @@
               <tr>
                 <td>{{ $0.name }}</td>
                 <td class='is-hidden-mobile'>{{ $0.size }}</td>
-                <td class='is-hidden-mobile'>{{ $0.download_count }}</td>
+                <td class='is-hidden-mobile'>{{ $0.uploader.login }}</td>
                 <td>{{ $0.updated_at }}</td>
                 <td><a class='button is-dark' href='{{ $0.browser_download_url }}'>Download</a></td>
               </tr>
