--- a/src/pages/benchmarks.html
+++ b/src/pages/benchmarks.html
@@ -8,4 +8,10 @@
     <a href='https://github.com/sebbekarlsson/fjb' target='_blank' class='button is-danger is-large mt-4'>Get FJB</button></a>
   </div>
 </section>
+<section class="section">
+  <div class="container content">
+    <button class='button is-dark' id='callgrind'>Show profile</button>
+    <div id='callgrind-content'></div>
+  </div>
+</section>
 @)
