adds link to footer

--- a/src/social.html
+++ b/src/social.html
@@ -12,6 +12,9 @@
     SocialLink("https://github.com/sebbekarlsson/fjb/actions", (@<img src="https://github.com/sebbekarlsson/fjb/workflows/Compile%20and%20test/badge.svg"/>@), " ")
     }} 
   </div>
+  <div class="column">
+    <a href="https://fjbundler.com">https://fjbundler.com</a>
+  </div> 
 </div>
 <div class="columns is-gapless social-area mb-6 is-mobile"> 
   <div class='column'>
